<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewHallo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/purple_200"
        android:text="@string/hallo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHallo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            android:textColor="@color/white"
            android:text="@string/tea"/>
        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:onClick="onClickChangeDrink"
            android:text="@string/coffee"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:text="@string/additions"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:text="@string/milk"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"

        app:layout_constraintEnd_toEndOf="@id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toEndOf="@id/checkBoxLemon"
        android:layout_margin="8dp"
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="@id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:text="@string/choose_drink"
        app:layout_constraintTop_toBottomOf="@id/checkBoxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerTea"
        android:entries="@array/options_of_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:entries="@array/options_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:onClick="onClickSendOrder"
        android:contentDescription="@string/button_send_order"
        app:layout_constraintTop_toBottomOf="@id/spinnerCoffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ordericon"/>

</androidx.constraintlayout.widget.ConstraintLayout>